Added New Link For Permissions Module On Home Page and litle changes on User Controller....

--- a/PMSP/Views/Shared/_myLayoutPage.cshtml
+++ b/PMSP/Views/Shared/_myLayoutPage.cshtml
@@ -147,6 +147,27 @@
                             </div>
                         </div>
                     }
+
+
+                    @if (currentUser.Role.UserPermissions.Count > 0 && currentUser.Role.UserPermissions.Any(p => p.Module.ModuleName == "Permissions"))
+                    {
+                        <div class="col-xl-3 col-sm-6 mb-3">
+                            <div class="card text-white bg-warning o-hidden h-100">
+                                <div class="card-body">
+                                    <div class="card-body-icon">
+                                        <i class="fas fa-fw fa-list"></i>
+                                    </div>
+                                    <div class="mr-5">Permission</div>
+                                </div>
+                                <a class="card-footer text-white clearfix small z-1" href="~/User/RegisterPermission">
+                                    <span class="float-left">Specify Access</span>
+                                    <span class="float-right">
+                                        <i class="fas fa-angle-right"></i>
+                                    </span>
+                                </a>
+                            </div>
+                        </div>
+                    }
                     <!-- Area Chart Example-->
 
 
