--- a/PMSP/Views/User/Index.cshtml
+++ b/PMSP/Views/User/Index.cshtml
@@ -5,6 +5,10 @@
     Layout = "~/Views/Shared/_myLayoutPage1.cshtml";
     //List<PMS.Models.User> users = ViewBag.users;
     //List<PMS.Models.User> vUsers = (List<PMS.Models.User>)ViewData["users"];
+
+    var user1 = (PMS.Models.User)Session["User"];
+    var permissions = user1.Role.UserPermissions;
+
 }
 
 <!-- DataTables Example -->
@@ -46,27 +50,34 @@
 
                     @foreach (var user in Model)    //if we are using view bag methodology then we need to give view bag parametre here its users, if we are using view data methodology then we need to give  vusers parameter, in this loop  insted of Model in both cases
                     {
-                    <tr>
-                        <td>@(user.FirstName + " " + user.LastName)</td>
-                        <td>@user.Email</td>
-                        <td>@Convert.ToDateTime(user.DOB).ToShortDateString()</td>
-                        <td>@(user.Gender == 1 ? "Male" : "FeMale")</td>
-                        <td>@(user.UserName)</td>
-                        <td>
-                            @(user.Role_Id != null ? user.Role.Title : "")
-                            @*@{
-            try
-            {
-                     @user.Role.Title;
-            }
-                catch (Exception ex)
-                {*@
-
-
-
-                        </td>
-                        <td><a href="~/User/Delete/@user.Id">Delete</a> | <a href="~/User/Edit/@user.Id">Edit</a>| <a href="~/User/ViewDetails/@user.Id">View</a></td>
-                    </tr>
+                        <tr>
+                            <td>@(user.FirstName + " " + user.LastName)</td>
+                            <td>@user.Email</td>
+                            <td>@Convert.ToDateTime(user.DOB).ToShortDateString()</td>
+                            <td>@(user.Gender == 1 ? "Male" : "FeMale")</td>
+                            <td>@(user.UserName)</td>
+                            <td>
+                                @(user.Role_Id != null ? user.Role.Title : "")
+                                @*@{
+                                    try
+                                    {
+                                             @user.Role.Title;
+                                    }
+                                        catch (Exception ex)
+                                        {*@
+                            </td>
+                            <td>
+                                @if (permissions.Any(p => p.Module != null && p.Module.ModuleName == "Users" && p.CanDelete))
+                                {
+                                    <a href="~/User/Delete/@user.Id">Delete</a> <span>|</span>
+                                }
+                                @if (permissions.Any(p => p.Module != null && p.Module.ModuleName == "Users" && p.CanWrite))
+                                {
+                                    <a href="~/User/Edit/@user.Id">Edit</a> <span>|</span>
+                                }
+                                <a href="~/User/ViewDetails/@user.Id">View</a>
+                            </td>
+                        </tr>
                     }
 
                 </tbody>
