--- a/PMSP/Views/Physician/Index.cshtml
+++ b/PMSP/Views/Physician/Index.cshtml
@@ -1,68 +1,87 @@
 ﻿@model List<PMS.Models.Physician>
-    @{
+@{
+    /**/
+
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_myLayoutPage1.cshtml";
     //List<PMS.Models.User>
     //List<PMS.Models.User>
-         
-                   }
-                <!-- DataTables Example -->
-                <div class="card mb-3">
-                    <div class="card-header">
-                        <i class="fas fa-table"></i>
-                        Record Of Physicians
-                    </div>
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                                <thead>
-                                    <tr>
-                                        <th>Physician Name</th>
-                                        <th>Speciality</th>
-                                        <th>Experiance</th>
-                                        <th>Location</th>
-                                        <th>Shift</th>
-                                        <th>Actions</th>
-                                    </tr>
-                                </thead>
-                                <tfoot>
+    var user1 = (PMS.Models.User)Session["User"];
+    var permissions = user1.Role.UserPermissions;
 
-                                </tfoot>
-                                <tbody>
+}
 
-                                    @*@for (int index = 0; index < Model.Count; index++)
-        {
-        var user = Model[index];
-        <tr>
-            <td>@(user.FirstName + " " + user.LastName)</td>
-            <td>@user.Email</td>
-            <td>@Convert.ToDateTime(user.DOB).ToShortDateString()</td>
-            <td>@(user.Gender == 1 ? "Male" : "FeMale")</td>
-            <td>@user.Role.Title</td>
-        </tr>
-        }*@
+   
+<!-- DataTables Example -->
+<div class="card mb-3">
+    <div class="card-header">
+        <i class="fas fa-table"></i>
+        Record Of Physicians
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>Physician Name</th>
+                        <th>Speciality</th>
+                        <th>Experiance</th>
+                        <th>Location</th>
+                        <th>Shift</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tfoot>
 
-                                    @foreach (var physician in Model)    //if we are using view bag methodology then we need to give view bag parametre here its users, if we are using view data methodology then we need to give  vusers parameter, in this loop  insted of Model in both cases
-                                    {
-                                        
-                                            <tr>
-                                                <td>@(physician.User.FirstName + " " + physician.User.LastName)</td>
-                                                <td>@physician.Speciality</td>
-                                                <td>@physician.Experience</td>
-                                                <td>@physician.Location</td>
-                                                <td>@physician.Shift</td>
-                                                <td><a href="~/Physician/Delete/@physician.Id">Delete</a> | <a href="~/Physician/Edit/@physician.Id">Edit</a>| <a href="~/Physician/ViewDetails/@physician.Id">View</a></td>
-                                            </tr>
+                </tfoot>
+                <tbody>
 
-                                      
+                    @*@for (int index = 0; index < Model.Count; index++)
+                        {
+                        var user = Model[index];
+                        <tr>
+                            <td>@(user.FirstName + " " + user.LastName)</td>
+                            <td>@user.Email</td>
+                            <td>@Convert.ToDateTime(user.DOB).ToShortDateString()</td>
+                            <td>@(user.Gender == 1 ? "Male" : "FeMale")</td>
+                            <td>@user.Role.Title</td>
+                        </tr>
+                        }*@
 
-                                    }
+                    @foreach (var physician in Model)    //if we are using view bag methodology then we need to give view bag parametre here its users, if we are using view data methodology then we need to give  vusers parameter, in this loop  insted of Model in both cases
+                    {
 
-<tbody>
-                            </table>
-                        </div>
-                    </div>
-                    <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-                </div>
+                        <tr>
+                            <td>@(physician.User.FirstName + " " + physician.User.LastName)</td>
+                            <td>@physician.Speciality</td>
+                            <td>@physician.Experience</td>
+                            <td>@physician.Location</td>
+                            <td>@physician.Shift</td>
+                            <td>
+
+                                @if (permissions.Any(p => p.Module != null && p.Module.ModuleName == "Physicians" && p.CanDelete))
+                                {
+
+                                    <a href="~/Physician/Delete/@physician.Id">Delete</a> <span> | </span>
+                                }
+                                @if (permissions.Any(p => p.Module != null && p.Module.ModuleName == "Physicians" && p.CanWrite))
+                                {
+
+                                    <a href="~/Physician/Edit/@physician.Id">Edit</a> <span> | </span>
+                                }
+                                <a href="~/Physician/ViewDetails/@physician.Id">View</a>
+                            </td>
+                        </tr>
+
+
+
+                    }
+
+                <tbody>
+            </table>
+        </div>
+    </div>
+    <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+</div>
 
 
